--- a/index.css
+++ b/index.css
@@ -7,14 +7,17 @@
 body {
     background-color: #c4f8e7;
     text-align: left;
+    scroll-snap-type: mandatory;
 }
 header {
     display: flex;
+    flex-direction: row;
     background-color: #f0ffff;
     background-image: url(./bg-hero-desktop\ \(1\).svg);
 }
 main {
-    padding-bottom: 88px;
+    padding: 60px;
+    margin-top: 100px;
 }
 .top-left {display: flex;
            flex-direction: column;
@@ -62,17 +65,20 @@ main {
     width: 75px;
     align-items: right;
 }
-.first-right {
-    flex: 50%;
-    margin: 20px;
+.grow-together2 {
+    width: 50%;
 }
-.first-left {
+.grow-together1{
+    width: 50%;
+    margin: auto 100px;
+}
+.grow-together {
     margin: 20px;
     background-color: white;
     display: flex;
-    flex-direction: column;
-    border-radius: 5px;
+    border-radius: 10px;
     vertical-align: auto;
+    border: 2px solid transparent;
 }
 .second-left {
     display: flex;
